# Monolith-FastApi

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  router.py
app/api/v1/: __init__.py  health.py
app/api/v1/bank/: __init__.py  routes.py
app/api/v1/checkout/: __init__.py  routes.py
app/core/: __init__.py
app/core/config/: __init__.py  settings.py
app/core/db/: __init__.py  engine.py
app/core/exceptions/: __init__.py  bank.py  checkout.py
app/core/lifespan/: __init__.py  shutdown.py  startup.py
app/core/logging/: __init__.py  setup.py
app/dao/: __init__.py  bank.py
app/dao/repositories/: __init__.py  app_user.py  checkout.py
app/models/: __init__.py  app_user.py  bank.py  checkout.py
app/schemas/: __init__.py  bank.py  checkout.py  health.py
app/services/: __init__.py
app/services/bank/: __init__.py  service.py
app/services/checkout/: __init__.py  service.py
app/services/health/: __init__.py  service.py
migrations/: env.py
migrations/versions/: 20260428_000001_create_app_users.py  20260504_000002_create_checkout_tables.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_bank.py  test_checkout.py  test_health.py
tests/db/: test_session.py
